[gd_scene load_steps=6 format=3 uid="uid://qm10f2r0sb2b"]

[ext_resource type="Script" path="res://Scenes/Objects/history_log.gd" id="1_0tyad"]
[ext_resource type="FontFile" uid="uid://dprhbmsy2ud0b" path="res://Assets/Font/Itim-Regular.ttf" id="1_kmldl"]
[ext_resource type="PackedScene" uid="uid://bbcl6n1s6o18v" path="res://Scenes/Objects/exit_button.tscn" id="3_2ijqk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bpvmc"]
bg_color = Color(0.0823529, 0.101961, 0.141176, 0.784314)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.564706, 0.305882, 0.545098, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="LabelSettings" id="LabelSettings_j5jmk"]
font = ExtResource("1_kmldl")
font_size = 90
outline_size = 28
outline_color = Color(0.564706, 0.305882, 0.545098, 1)

[node name="HistoryLog" type="Control"]
z_index = 20
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_0tyad")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 1313.0
offset_bottom = 764.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bpvmc")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 40

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_scroll_mode = 0

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2

[node name="historyText" type="RichTextLabel" parent="PanelContainer/MarginContainer/ScrollContainer/Rows"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1200, 50)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_kmldl")
theme_override_fonts/bold_font = ExtResource("1_kmldl")
theme_override_font_sizes/normal_font_size = 43
theme_override_font_sizes/bold_font_size = 60
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 707.0
offset_top = -95.0
offset_right = 1266.0
offset_bottom = 14.0
text = "HISTORY LOG
"
label_settings = SubResource("LabelSettings_j5jmk")

[node name="ExitButton" parent="." instance=ExtResource("3_2ijqk")]
position = Vector2(1396, 85)

[connection signal="input_event" from="ExitButton" to="." method="_on_exit_button_input_event"]
